# pyproject

./: README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_classes_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_classes_py.html
src/: classes.py  main.py
tests/: test_classes.py  test_main.py
